--- a/k8s-spring-boot-deployment.yml
+++ b/k8s-spring-boot-deployment.yml
@@ -14,12 +14,12 @@ spec:
     spec:
       containers:
         - name: springboot
-          image: rahulwagh17/jhooq-docker-demo:jhooq-docker-demo
+          image: matsandy/example-kube:latest
           ports:
-            - containerPort: 8080
+            - containerPort: 8087
           env:
             - name: PORT
-              value: "8080"
+              value: "8087"
 ---
 apiVersion: v1
 kind: Service
@@ -29,6 +29,6 @@ spec:
   type: NodePort
   ports:
     - port: 80
-      targetPort: 8080
+      targetPort: 8087
   selector:
     app: jhooq-springboot
